fix: fix z-index of header

--- a/techie/no-framework-scss/src/assets/scss/_header.scss
+++ b/techie/no-framework-scss/src/assets/scss/_header.scss
@@ -10,6 +10,8 @@ $scroll-transition: all 0.4s ease-in-out;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	z-index: 1;
+
 	.header--container {
 		display: flex;
 		justify-content: space-between;
